--- a/index.html
+++ b/index.html
@@ -6,62 +6,124 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Css-Grid</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: rgb(235, 229, 229);
-    }
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
-    .wrapper>* {
-      border: 1px solid pink;
-      background: #fff;
-    }
-
-    .wrapper {
-      display: grid;
-      grid-template-columns: 25% auto;
-      grid-template-rows: 1fr 2fr 2.5fr 1fr;
-      grid-gap: 10px;
-      text-align: center;
-    }
-
-    header {
-      grid-column: 1/3;
-    }
-
-    aside {
-      grid-row: 2/3;
-    }
-
-    main {
-      grid-row: 2/5;
-    }
-
-    footer {
-      grid-row: 5/6;
-      grid-column: 1/3;
-    }
-  </style>
 </head>
 
 <body>
+
   <div class="wrapper">
     <header>
-      <h1>Header</h1>
+      <h1>CSS GRID</h1>
     </header>
-    <aside>
-      <h1>Sidebar</h1>
-    </aside>
-    <main>
-      <h1>Main</h1>
-    </main>
-    <footer>
-      <h1>
-        Footer
-      </h1>
-    </footer>
+    <div class="options_container">
+
+      <div class="template_rows">
+        <p>grid-template-rows:</p>
+
+        <input type="range" min "1" max="7" value="4" class="rows_range">
+      </div>
+      <div class="template_columns">
+        <p>grid-template-columns:</p>
+
+        <input type="range" min "1" max="7" value="4" class="columns_range">
+      </div>
+      <div class="grid_gap">
+        <div class="grid_gap_rows">
+          <p>Grid gap </p>
+
+          <p>rows:</p>
+          <input type="number" placeholder="0">
+          <p>columns:</p>
+          <input type="number" placeholder="0">
+        </div>
+        <div class="items">
+          <div class="justify_items">
+            <p>
+              Justify Items:
+            </p>
+            <select name="justify_items">
+              <option value="start">start</option>
+              <option value="end">end</option>
+              <option value="center">center</option>
+              <option value="stretch">stretch</option>
+
+            </select>
+          </div>
+          <div class="align_items">
+            <p>
+              Align Items:
+            </p>
+            <select name="align_items">
+              <option value="start">start</option>
+              <option value="end">end</option>
+              <option value="center">center</option>
+              <option value="stretch">stretch</option>
+
+            </select>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="sub_grid_container">
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+      <div class="grid_cell">
+        <div class="grid_inhalt"></div>
+      </div>
+    </div>
   </div>
+
+
+
+  </div>
+
+  <script src="main.js"></script>
 </body>
 
 </html>
