--- a/index.html
+++ b/index.html
@@ -12,115 +12,21 @@
 </head>
 
 <body>
-
+  <!-- <header>
+    <h1>
+      CSS GRID
+    </h1>
+  </header> -->
   <div class="wrapper">
-    <header>
-      <h1>CSS GRID</h1>
-    </header>
-    <div class="options_container">
 
-      <div class="template_rows">
-        <p>grid-template-rows:</p>
-
-        <input type="range" min "1" max="7" value="4" class="rows_range">
-      </div>
-      <div class="template_columns">
-        <p>grid-template-columns:</p>
-
-        <input type="range" min "1" max="7" value="4" class="columns_range">
-      </div>
-      <div class="grid_gap">
-        <div class="grid_gap_rows">
-          <p>Grid gap </p>
-
-          <p>rows:</p>
-          <input type="number" placeholder="0">
-          <p>columns:</p>
-          <input type="number" placeholder="0">
-        </div>
-        <div class="items">
-          <div class="justify_items">
-            <p>
-              Justify Items:
-            </p>
-            <select name="justify_items">
-              <option value="start">start</option>
-              <option value="end">end</option>
-              <option value="center">center</option>
-              <option value="stretch">stretch</option>
-
-            </select>
-          </div>
-          <div class="align_items">
-            <p>
-              Align Items:
-            </p>
-            <select name="align_items">
-              <option value="start">start</option>
-              <option value="end">end</option>
-              <option value="center">center</option>
-              <option value="stretch">stretch</option>
-
-            </select>
-          </div>
-        </div>
-
-      </div>
+    <div class="grid_wrapper">
+      <div class="grid_cells"></div>
+      <div class="grid_cells"></div>
+      <div class="grid_cells"></div>
+      <div class="grid_cells"></div>
+      <div class="grid_cells"></div>
+      <div class="grid_cells"></div>
     </div>
-    <div class="sub_grid_container">
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-      <div class="grid_cell">
-        <div class="grid_inhalt"></div>
-      </div>
-    </div>
-  </div>
-
-
-
   </div>
 
   <script src="main.js"></script>
