--- a/index.html
+++ b/index.html
@@ -12,21 +12,14 @@
 </head>
 
 <body>
-  <!-- <header>
-    <h1>
-      CSS GRID
-    </h1>
-  </header> -->
   <div class="wrapper">
-
     <div class="grid_wrapper">
-      <div class="grid_cells"></div>
-      <div class="grid_cells"></div>
-      <div class="grid_cells"></div>
-      <div class="grid_cells"></div>
-      <div class="grid_cells"></div>
-      <div class="grid_cells"></div>
+      <div class="grid_cell"></div>
+      <div class="grid_cell"></div>
+      <div class="grid_cell"></div>
+      <div class="grid_cell"></div>
     </div>
+
   </div>
 
   <script src="main.js"></script>
